Assignment-3/src/parser.output
Nonterminals useless in grammar

    static_opt
    member_declaration
    $@2
    $@3
    members
    $@4
    struct_declarator_list
    struct_declarator
    const_opt
    function_header
    function_definition


Terminals unused in grammar

    INCLUDE
    ARROW
    INVALID_IDENTIFIER


Rules useless in grammar

  196 static_opt: STATIC
  197           | ε

  198 $@2: ε

  199 member_declaration: CONST return_type $@2 struct_declarator_list SEMICOLON

  200 $@3: ε

  201 member_declaration: return_type $@3 members

  202 members: struct_declarator_list SEMICOLON

  203 $@4: ε

  204 members: IDENTIFIER LROUND RROUND $@4 compound_statement
  205        | IDENTIFIER LROUND parameter_list RROUND compound_statement

  206 struct_declarator_list: struct_declarator
  207                       | struct_declarator_list COMMA struct_declarator

  208 struct_declarator: init_declarator

  209 const_opt: CONST
  210          | ε

  211 function_header: return_type IDENTIFIER LROUND RROUND
  212                | return_type IDENTIFIER LROUND parameter_list RROUND

  213 function_definition: function_header compound_statement


State 13 conflicts: 1 shift/reduce
State 25 conflicts: 1 shift/reduce
State 83 conflicts: 3 shift/reduce
State 87 conflicts: 1 shift/reduce
State 88 conflicts: 2 shift/reduce
State 92 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 primary_expression: IDENTIFIER
    2                   | constant
    3                   | LROUND expression RROUND
    4                   | STRING_LITERAL

    5 constant: DECIMAL_LITERAL
    6         | CHARACTER_LITERAL
    7         | EXPONENT_LITERAL
    8         | DOUBLE_LITERAL
    9         | NULLPTR
   10         | TRUE
   11         | FALSE

   12 postfix_expression: primary_expression
   13                   | postfix_expression LSQUARE expression RSQUARE
   14                   | postfix_expression LROUND RROUND
   15                   | postfix_expression LROUND argument_expression_list RROUND
   16                   | postfix_expression DOT IDENTIFIER
   17                   | postfix_expression INCREMENT
   18                   | postfix_expression DECREMENT

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 unary_expression: postfix_expression
   22                 | INCREMENT unary_expression
   23                 | DECREMENT unary_expression
   24                 | unary_operator cast_expression
   25                 | SIZEOF LROUND unary_expression RROUND
   26                 | SIZEOF LROUND cast_type RROUND

   27 unary_operator: BITWISE_AND
   28               | STAR
   29               | PLUS
   30               | MINUS
   31               | TILDE
   32               | LOGICAL_NOT

   33 cast_expression: unary_expression
   34                | LROUND cast_type RROUND cast_expression

   35 cast_type: cast_type_specifier pointer_opt

   36 cast_type_specifier: VOID
   37                    | CHAR
   38                    | INT
   39                    | LONG
   40                    | DOUBLE
   41                    | BOOL
   42                    | TYPE_NAME

   43 multiplicative_expression: cast_expression
   44                          | multiplicative_expression STAR cast_expression
   45                          | multiplicative_expression DIVIDE cast_expression
   46                          | multiplicative_expression MODULUS cast_expression

   47 additive_expression: multiplicative_expression
   48                    | additive_expression PLUS multiplicative_expression
   49                    | additive_expression MINUS multiplicative_expression

   50 shift_expression: additive_expression
   51                 | shift_expression LEFT_SHIFT additive_expression
   52                 | shift_expression RIGHT_SHIFT additive_expression

   53 relational_expression: shift_expression
   54                      | relational_expression GREATER_THAN shift_expression
   55                      | relational_expression LESS_THAN shift_expression
   56                      | relational_expression LESS_EQUAL shift_expression
   57                      | relational_expression GREATER_EQUAL shift_expression

   58 equality_expression: relational_expression
   59                    | equality_expression EQUAL relational_expression
   60                    | equality_expression NOT_EQUAL relational_expression

   61 and_expression: equality_expression
   62               | and_expression BITWISE_AND equality_expression

   63 exclusive_or_expression: and_expression
   64                        | exclusive_or_expression BITWISE_XOR and_expression

   65 inclusive_or_expression: exclusive_or_expression
   66                        | inclusive_or_expression BITWISE_OR exclusive_or_expression

   67 logical_and_expression: inclusive_or_expression
   68                       | logical_and_expression LOGICAL_AND inclusive_or_expression

   69 logical_or_expression: logical_and_expression
   70                      | logical_or_expression LOGICAL_OR logical_and_expression

   71 conditional_expression: logical_or_expression
   72                       | logical_or_expression QUESTION_MARK expression COLON conditional_expression

   73 assignment_expression: conditional_expression
   74                      | unary_expression assignment_operator assignment_expression

   75 assignment_operator: ASSIGN
   76                    | STAR_EQUAL
   77                    | DIV_EQUAL
   78                    | MOD_EQUAL
   79                    | PLUS_EQUAL
   80                    | MINUS_EQUAL
   81                    | LEFT_SHIFT_EQ
   82                    | RIGHT_SHIFT_EQ
   83                    | AND_EQUAL
   84                    | XOR_EQUAL
   85                    | OR_EQUAL

   86 expression: assignment_expression
   87           | expression COMMA assignment_expression

   88 constant_expression: conditional_expression

   89 declaration: declaration_specifiers init_declarator_list SEMICOLON

   90 declaration_specifiers: type_specifier
   91                       | STATIC type_specifier
   92                       | CONST type_specifier
   93                       | STATIC CONST type_specifier

   94 init_declarator_list: init_declarator
   95                     | init_declarator_list COMMA init_declarator

   96 pointer_opt: pointer_list
   97            | ε

   98 pointer_list: pointer_list STAR
   99             | STAR

  100 init_declarator: IDENTIFIER
  101                | IDENTIFIER square_list
  102                | pointer_list IDENTIFIER
  103                | IDENTIFIER ASSIGN assignment_expression
  104                | pointer_list IDENTIFIER ASSIGN assignment_expression
  105                | IDENTIFIER square_list ASSIGN initializer

  106 initializer: LCURLY initializer_list RCURLY

  107 initializer_list: assignment_expression
  108                 | initializer_list COMMA assignment_expression

  109 square_list: square_list LSQUARE constant_expression RSQUARE
  110            | LSQUARE constant_expression RSQUARE

  111 type_specifier: VOID
  112               | CHAR
  113               | INT
  114               | LONG
  115               | DOUBLE
  116               | BOOL
  117               | TYPE_NAME

  118 translation_unit: external_declaration
  119                 | translation_unit external_declaration

  120 $@1: ε

  121 struct_or_class_specifier: struct_or_class IDENTIFIER LCURLY $@1 struct_or_class_member_list RCURLY

  122 struct_or_class: STRUCT
  123                | CLASS

  124 struct_or_class_member_list: ε
  125                            | struct_or_class_member_list struct_or_class_member

  126 struct_or_class_member: access_specifier_label
  127                       | external_declaration

  128 access_specifier_label: PUBLIC COLON
  129                       | PRIVATE COLON
  130                       | PROTECTED COLON

  131 parameter_list: parameter_declaration
  132               | parameter_list COMMA parameter_declaration

  133 parameter_declaration: return_type IDENTIFIER

  134 statement: labeled_statement
  135          | compound_statement
  136          | expression_statement
  137          | selection_statement
  138          | iteration_statement
  139          | jump_statement

  140 labeled_statement: IDENTIFIER COLON

  141 compound_statement: LCURLY RCURLY

  142 $@5: ε

  143 compound_statement: LCURLY $@5 statement_list RCURLY

  144 statement_list: block_item
  145               | statement_list block_item

  146 block_item: statement
  147           | declaration

  148 expression_statement: SEMICOLON
  149                     | expression SEMICOLON

  150 selection_statement: IF LROUND expression RROUND statement
  151                    | IF LROUND expression RROUND statement ELSE statement
  152                    | switch_head LCURLY case_list RCURLY

  153 $@6: ε

  154 switch_head: SWITCH $@6 LROUND expression RROUND

  155 case_list: ε
  156          | case_list case_item

  157 case_item: CASE constant_expression statement
  158          | DEFAULT statement

  159 $@7: ε

  160 iteration_statement: WHILE LROUND expression RROUND $@7 statement

  161 $@8: ε

  162 iteration_statement: UNTIL LROUND expression RROUND $@8 statement

  163 $@9: ε

  164 iteration_statement: DO $@9 statement WHILE LROUND expression RROUND SEMICOLON

  165 $@10: ε

  166 iteration_statement: for_start LROUND for_init_statement expression_statement RROUND $@10 statement

  167 $@11: ε

  168 iteration_statement: for_start LROUND for_init_statement expression_statement expression RROUND $@11 statement

  169 for_start: FOR

  170 for_init_statement: expression_statement
  171                   | declaration

  172 jump_statement: GOTO IDENTIFIER SEMICOLON
  173               | CONTINUE SEMICOLON
  174               | BREAK SEMICOLON
  175               | RETURN SEMICOLON
  176               | RETURN expression SEMICOLON

  177 $@12: ε

  178 external_declaration: type_specifier $@12 external

  179 $@13: ε

  180 external_declaration: type_specifier pointer_list $@13 external
  181                     | struct_or_class_specifier SEMICOLON
  182                     | TYPEDEF return_type IDENTIFIER SEMICOLON
  183                     | declare

  184 $@14: ε

  185 declare: CONST type_specifier $@14 init_declarator_list SEMICOLON

  186 $@15: ε

  187 declare: STATIC CONST type_specifier $@15 init_declarator_list SEMICOLON

  188 $@16: ε

  189 declare: STATIC type_specifier $@16 init_declarator_list SEMICOLON

  190 $@17: ε

  191 external: IDENTIFIER LROUND RROUND $@17 compound_statement

  192 $@18: ε

  193 external: IDENTIFIER LROUND parameter_list RROUND $@18 compound_statement
  194         | init_declarator_list SEMICOLON

  195 return_type: type_specifier pointer_opt


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    INCLUDE <str> (258)
    TYPEDEF <str> (259) 182
    TYPE_NAME <str> (260) 42 117
    PLUS <str> (261) 29 48
    MINUS <str> (262) 30 49
    STAR <str> (263) 28 44 98 99
    DIVIDE <str> (264) 45
    MODULUS <str> (265) 46
    ASSIGN <str> (266) 75 103 104 105
    INCREMENT <str> (267) 17 22
    DECREMENT <str> (268) 18 23
    EQUAL <str> (269) 59
    NOT_EQUAL <str> (270) 60
    LESS_THAN <str> (271) 55
    GREATER_THAN <str> (272) 54
    LESS_EQUAL <str> (273) 56
    GREATER_EQUAL <str> (274) 57
    BITWISE_AND <str> (275) 27 62
    BITWISE_OR <str> (276) 66
    BITWISE_XOR <str> (277) 64
    LEFT_SHIFT <str> (278) 51
    RIGHT_SHIFT <str> (279) 52
    ARROW <str> (280)
    LOGICAL_NOT <str> (281) 32
    LOGICAL_AND <str> (282) 68
    LOGICAL_OR <str> (283) 70
    PLUS_EQUAL <str> (284) 79
    MINUS_EQUAL <str> (285) 80
    STAR_EQUAL <str> (286) 76
    DIV_EQUAL <str> (287) 77
    MOD_EQUAL <str> (288) 78
    AND_EQUAL <str> (289) 83
    OR_EQUAL <str> (290) 85
    XOR_EQUAL <str> (291) 84
    LEFT_SHIFT_EQ <str> (292) 81
    RIGHT_SHIFT_EQ <str> (293) 82
    LROUND <str> (294) 3 14 15 25 26 34 150 151 154 160 162 164 166 168 191 193
    RROUND <str> (295) 3 14 15 25 26 34 150 151 154 160 162 164 166 168 191 193
    LCURLY <str> (296) 106 121 141 143 152
    RCURLY <str> (297) 106 121 141 143 152
    LSQUARE <str> (298) 13 109 110
    RSQUARE <str> (299) 13 109 110
    SEMICOLON <str> (300) 89 148 149 164 172 173 174 175 176 181 182 185 187 189 194
    COLON <str> (301) 72 128 129 130 140
    COMMA <str> (302) 20 87 95 108 132
    DOT <str> (303) 16
    QUESTION_MARK <str> (304) 72
    IF <str> (305) 150 151
    ELSE <str> (306) 151
    SWITCH <str> (307) 154
    CASE <str> (308) 157
    DEFAULT <str> (309) 158
    WHILE <str> (310) 160 164
    DO <str> (311) 164
    FOR <str> (312) 169
    GOTO <str> (313) 172
    CONTINUE <str> (314) 173
    BREAK <str> (315) 174
    RETURN <str> (316) 175 176
    UNTIL <str> (317) 162
    VOID <str> (318) 36 111
    INT <str> (319) 38 113
    DOUBLE <str> (320) 40 115
    CHAR <str> (321) 37 112
    BOOL <str> (322) 41 116
    LONG <str> (323) 39 114
    TRUE <str> (324) 10
    FALSE <str> (325) 11
    NULLPTR <str> (326) 9
    TILDE <str> (327) 31
    STATIC <str> (328) 91 93 187 189
    CONST <str> (329) 92 93 185 187
    SIZEOF <str> (330) 25 26
    STRING_LITERAL <str> (331) 4
    CLASS <str> (332) 123
    STRUCT <str> (333) 122
    PUBLIC <str> (334) 128
    PRIVATE <str> (335) 129
    PROTECTED <str> (336) 130
    IDENTIFIER <str> (337) 1 16 100 101 102 103 104 105 121 133 140 172 182 191 193
    INVALID_IDENTIFIER <str> (338)
    DECIMAL_LITERAL <str> (339) 5
    DOUBLE_LITERAL <str> (340) 8
    EXPONENT_LITERAL <str> (341) 7
    CHARACTER_LITERAL <str> (342) 6
    LOWER_THAN_ELSE (343)


Nonterminals, with rules where they appear

    $accept (89)
        on left: 0
    primary_expression <node> (90)
        on left: 1 2 3 4
        on right: 12
    constant <node> (91)
        on left: 5 6 7 8 9 10 11
        on right: 2
    postfix_expression <node> (92)
        on left: 12 13 14 15 16 17 18
        on right: 13 14 15 16 17 18 21
    argument_expression_list <node> (93)
        on left: 19 20
        on right: 15 20
    unary_expression <node> (94)
        on left: 21 22 23 24 25 26
        on right: 22 23 25 33 74
    unary_operator <str> (95)
        on left: 27 28 29 30 31 32
        on right: 24
    cast_expression <node> (96)
        on left: 33 34
        on right: 24 34 43 44 45 46
    cast_type <str> (97)
        on left: 35
        on right: 26 34
    cast_type_specifier <str> (98)
        on left: 36 37 38 39 40 41 42
        on right: 35
    multiplicative_expression <node> (99)
        on left: 43 44 45 46
        on right: 44 45 46 47 48 49
    additive_expression <node> (100)
        on left: 47 48 49
        on right: 48 49 50 51 52
    shift_expression <node> (101)
        on left: 50 51 52
        on right: 51 52 53 54 55 56 57
    relational_expression <node> (102)
        on left: 53 54 55 56 57
        on right: 54 55 56 57 58 59 60
    equality_expression <node> (103)
        on left: 58 59 60
        on right: 59 60 61 62
    and_expression <node> (104)
        on left: 61 62
        on right: 62 63 64
    exclusive_or_expression <node> (105)
        on left: 63 64
        on right: 64 65 66
    inclusive_or_expression <node> (106)
        on left: 65 66
        on right: 66 67 68
    logical_and_expression <node> (107)
        on left: 67 68
        on right: 68 69 70
    logical_or_expression <node> (108)
        on left: 69 70
        on right: 70 71 72
    conditional_expression <node> (109)
        on left: 71 72
        on right: 72 73 88
    assignment_expression <node> (110)
        on left: 73 74
        on right: 19 20 74 86 87 103 104 107 108
    assignment_operator <str> (111)
        on left: 75 76 77 78 79 80 81 82 83 84 85
        on right: 74
    expression <node> (112)
        on left: 86 87
        on right: 3 13 72 87 149 150 151 154 160 162 164 168 176
    constant_expression <node> (113)
        on left: 88
        on right: 109 110 157
    declaration <node> (114)
        on left: 89
        on right: 147 171
    declaration_specifiers <str> (115)
        on left: 90 91 92 93
        on right: 89
    init_declarator_list <node> (116)
        on left: 94 95
        on right: 89 95 185 187 189 194
    pointer_opt <str> (117)
        on left: 96 97
        on right: 35 195
    pointer_list <str> (118)
        on left: 98 99
        on right: 96 98 102 104 180
    init_declarator <node> (119)
        on left: 100 101 102 103 104 105
        on right: 94 95
    initializer <node> (120)
        on left: 106
        on right: 105
    initializer_list <node> (121)
        on left: 107 108
        on right: 106 108
    square_list <node> (122)
        on left: 109 110
        on right: 101 105 109
    type_specifier <str> (123)
        on left: 111 112 113 114 115 116 117
        on right: 90 91 92 93 178 180 185 187 189 195
    translation_unit <node> (124)
        on left: 118 119
        on right: 0 119
    struct_or_class_specifier <node> (125)
        on left: 121
        on right: 181
    $@1 (126)
        on left: 120
        on right: 121
    struct_or_class <node> (127)
        on left: 122 123
        on right: 121
    struct_or_class_member_list <node> (128)
        on left: 124 125
        on right: 121 125
    struct_or_class_member <node> (129)
        on left: 126 127
        on right: 125
    access_specifier_label <node> (130)
        on left: 128 129 130
        on right: 126
    parameter_list <node> (131)
        on left: 131 132
        on right: 132 193
    parameter_declaration <node> (132)
        on left: 133
        on right: 131 132
    statement <node> (133)
        on left: 134 135 136 137 138 139
        on right: 146 150 151 157 158 160 162 164 166 168
    labeled_statement <node> (134)
        on left: 140
        on right: 134
    compound_statement <node> (135)
        on left: 141 143
        on right: 135 191 193
    $@5 (136)
        on left: 142
        on right: 143
    statement_list <node> (137)
        on left: 144 145
        on right: 143 145
    block_item <node> (138)
        on left: 146 147
        on right: 144 145
    expression_statement <node> (139)
        on left: 148 149
        on right: 136 166 168 170
    selection_statement <node> (140)
        on left: 150 151 152
        on right: 137
    switch_head <node> (141)
        on left: 154
        on right: 152
    $@6 (142)
        on left: 153
        on right: 154
    case_list <node> (143)
        on left: 155 156
        on right: 152 156
    case_item <node> (144)
        on left: 157 158
        on right: 156
    iteration_statement <node> (145)
        on left: 160 162 164 166 168
        on right: 138
    $@7 (146)
        on left: 159
        on right: 160
    $@8 (147)
        on left: 161
        on right: 162
    $@9 (148)
        on left: 163
        on right: 164
    $@10 (149)
        on left: 165
        on right: 166
    $@11 (150)
        on left: 167
        on right: 168
    for_start <node> (151)
        on left: 169
        on right: 166 168
    for_init_statement <node> (152)
        on left: 170 171
        on right: 166 168
    jump_statement <node> (153)
        on left: 172 173 174 175 176
        on right: 139
    external_declaration <node> (154)
        on left: 178 180 181 182 183
        on right: 118 119 127
    $@12 (155)
        on left: 177
        on right: 178
    $@13 (156)
        on left: 179
        on right: 180
    declare <node> (157)
        on left: 185 187 189
        on right: 183
    $@14 (158)
        on left: 184
        on right: 185
    $@15 (159)
        on left: 186
        on right: 187
    $@16 (160)
        on left: 188
        on right: 189
    external <node> (161)
        on left: 191 193 194
        on right: 178 180
    $@17 (162)
        on left: 190
        on right: 191
    $@18 (163)
        on left: 192
        on right: 193
    return_type <str> (164)
        on left: 195
        on right: 133 182


State 0

    0 $accept: • translation_unit $end

    TYPEDEF    shift, and go to state 1
    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8
    STATIC     shift, and go to state 9
    CONST      shift, and go to state 10
    CLASS      shift, and go to state 11
    STRUCT     shift, and go to state 12

    type_specifier             go to state 13
    translation_unit           go to state 14
    struct_or_class_specifier  go to state 15
    struct_or_class            go to state 16
    external_declaration       go to state 17
    declare                    go to state 18


State 1

  182 external_declaration: TYPEDEF • return_type IDENTIFIER SEMICOLON

    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8

    type_specifier  go to state 19
    return_type     go to state 20


State 2

  117 type_specifier: TYPE_NAME •

    $default  reduce using rule 117 (type_specifier)


State 3

  111 type_specifier: VOID •

    $default  reduce using rule 111 (type_specifier)


State 4

  113 type_specifier: INT •

    $default  reduce using rule 113 (type_specifier)


State 5

  115 type_specifier: DOUBLE •

    $default  reduce using rule 115 (type_specifier)


State 6

  112 type_specifier: CHAR •

    $default  reduce using rule 112 (type_specifier)


State 7

  116 type_specifier: BOOL •

    $default  reduce using rule 116 (type_specifier)


State 8

  114 type_specifier: LONG •

    $default  reduce using rule 114 (type_specifier)


State 9

  187 declare: STATIC • CONST type_specifier $@15 init_declarator_list SEMICOLON
  189        | STATIC • type_specifier $@16 init_declarator_list SEMICOLON

    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8
    CONST      shift, and go to state 21

    type_specifier  go to state 22


State 10

  185 declare: CONST • type_specifier $@14 init_declarator_list SEMICOLON

    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8

    type_specifier  go to state 23


State 11

  123 struct_or_class: CLASS •

    $default  reduce using rule 123 (struct_or_class)


State 12

  122 struct_or_class: STRUCT •

    $default  reduce using rule 122 (struct_or_class)


State 13

  178 external_declaration: type_specifier • $@12 external
  180                     | type_specifier • pointer_list $@13 external

    STAR  shift, and go to state 24

    STAR      [reduce using rule 177 ($@12)]
    $default  reduce using rule 177 ($@12)

    pointer_list  go to state 25
    $@12          go to state 26


State 14

    0 $accept: translation_unit • $end
  119 translation_unit: translation_unit • external_declaration

    $end       shift, and go to state 27
    TYPEDEF    shift, and go to state 1
    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8
    STATIC     shift, and go to state 9
    CONST      shift, and go to state 10
    CLASS      shift, and go to state 11
    STRUCT     shift, and go to state 12

    type_specifier             go to state 13
    struct_or_class_specifier  go to state 15
    struct_or_class            go to state 16
    external_declaration       go to state 28
    declare                    go to state 18


State 15

  181 external_declaration: struct_or_class_specifier • SEMICOLON

    SEMICOLON  shift, and go to state 29


State 16

  121 struct_or_class_specifier: struct_or_class • IDENTIFIER LCURLY $@1 struct_or_class_member_list RCURLY

    IDENTIFIER  shift, and go to state 30


State 17

  118 translation_unit: external_declaration •

    $default  reduce using rule 118 (translation_unit)


State 18

  183 external_declaration: declare •

    $default  reduce using rule 183 (external_declaration)


State 19

  195 return_type: type_specifier • pointer_opt

    STAR  shift, and go to state 24

    $default  reduce using rule 97 (pointer_opt)

    pointer_opt   go to state 31
    pointer_list  go to state 32


State 20

  182 external_declaration: TYPEDEF return_type • IDENTIFIER SEMICOLON

    IDENTIFIER  shift, and go to state 33


State 21

  187 declare: STATIC CONST • type_specifier $@15 init_declarator_list SEMICOLON

    TYPE_NAME  shift, and go to state 2
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8

    type_specifier  go to state 34


State 22

  189 declare: STATIC type_specifier • $@16 init_declarator_list SEMICOLON

    $default  reduce using rule 188 ($@16)

    $@16  go to state 35


State 23

  185 declare: CONST type_specifier • $@14 init_declarator_list SEMICOLON

    $default  reduce using rule 184 ($@14)

    $@14  go to state 36


State 24

   99 pointer_list: STAR •

    $default  reduce using rule 99 (pointer_list)


State 25

   98 pointer_list: pointer_list • STAR
  180 external_declaration: type_specifier pointer_list • $@13 external

    STAR  shift, and go to state 37

    STAR      [reduce using rule 179 ($@13)]
    $default  reduce using rule 179 ($@13)

    $@13  go to state 38


State 26

  178 external_declaration: type_specifier $@12 • external

    STAR        shift, and go to state 24
    IDENTIFIER  shift, and go to state 39

    init_declarator_list  go to state 40
    pointer_list          go to state 41
    init_declarator       go to state 42
    external              go to state 43


State 27

    0 $accept: translation_unit $end •

    $default  accept


State 28

  119 translation_unit: translation_unit external_declaration •

    $default  reduce using rule 119 (translation_unit)


State 29

  181 external_declaration: struct_or_class_specifier SEMICOLON •

    $default  reduce using rule 181 (external_declaration)


State 30

  121 struct_or_class_specifier: struct_or_class IDENTIFIER • LCURLY $@1 struct_or_class_member_list RCURLY

    LCURLY  shift, and go to state 44


State 31

  195 return_type: type_specifier pointer_opt •

    $default  reduce using rule 195 (return_type)


State 32

   96 pointer_opt: pointer_list •
   98 pointer_list: pointer_list • STAR

    STAR  shift, and go to state 37

    $default  reduce using rule 96 (pointer_opt)


State 33

  182 external_declaration: TYPEDEF return_type IDENTIFIER • SEMICOLON

    SEMICOLON  shift, and go to state 45


State 34

  187 declare: STATIC CONST type_specifier • $@15 init_declarator_list SEMICOLON

    $default  reduce using rule 186 ($@15)

    $@15  go to state 46


State 35

  189 declare: STATIC type_specifier $@16 • init_declarator_list SEMICOLON

    STAR        shift, and go to state 24
    IDENTIFIER  shift, and go to state 47

    init_declarator_list  go to state 48
    pointer_list          go to state 41
    init_declarator       go to state 42


State 36

  185 declare: CONST type_specifier $@14 • init_declarator_list SEMICOLON

    STAR        shift, and go to state 24
    IDENTIFIER  shift, and go to state 47

    init_declarator_list  go to state 49
    pointer_list          go to state 41
    init_declarator       go to state 42


State 37

   98 pointer_list: pointer_list STAR •

    $default  reduce using rule 98 (pointer_list)


State 38

  180 external_declaration: type_specifier pointer_list $@13 • external

    STAR        shift, and go to state 24
    IDENTIFIER  shift, and go to state 39

    init_declarator_list  go to state 40
    pointer_list          go to state 41
    init_declarator       go to state 42
    external              go to state 50


State 39

  100 init_declarator: IDENTIFIER •
  101                | IDENTIFIER • square_list
  103                | IDENTIFIER • ASSIGN assignment_expression
  105                | IDENTIFIER • square_list ASSIGN initializer
  191 external: IDENTIFIER • LROUND RROUND $@17 compound_statement
  193         | IDENTIFIER • LROUND parameter_list RROUND $@18 compound_statement

    ASSIGN   shift, and go to state 51
    LROUND   shift, and go to state 52
    LSQUARE  shift, and go to state 53

    $default  reduce using rule 100 (init_declarator)

    square_list  go to state 54


State 40

   95 init_declarator_list: init_declarator_list • COMMA init_declarator
  194 external: init_declarator_list • SEMICOLON

    SEMICOLON  shift, and go to state 55
    COMMA      shift, and go to state 56


State 41

   98 pointer_list: pointer_list • STAR
  102 init_declarator: pointer_list • IDENTIFIER
  104                | pointer_list • IDENTIFIER ASSIGN assignment_expression

    STAR        shift, and go to state 37
    IDENTIFIER  shift, and go to state 57


State 42

   94 init_declarator_list: init_declarator •

    $default  reduce using rule 94 (init_declarator_list)


State 43

  178 external_declaration: type_specifier $@12 external •

    $default  reduce using rule 178 (external_declaration)


State 44

  121 struct_or_class_specifier: struct_or_class IDENTIFIER LCURLY • $@1 struct_or_class_member_list RCURLY

    $default  reduce using rule 120 ($@1)

    $@1  go to state 58


State 45

  182 external_declaration: TYPEDEF return_type IDENTIFIER SEMICOLON •

    $default  reduce using rule 182 (external_declaration)


State 46

  187 declare: STATIC CONST type_specifier $@15 • init_declarator_list SEMICOLON

    STAR        shift, and go to state 24
    IDENTIFIER  shift, and go to state 47

    init_declarator_list  go to state 59
    pointer_list          go to state 41
    init_declarator       go to state 42


State 47

  100 init_declarator: IDENTIFIER •
  101                | IDENTIFIER • square_list
  103                | IDENTIFIER • ASSIGN assignment_expression
  105                | IDENTIFIER • square_list ASSIGN initializer

    ASSIGN   shift, and go to state 51
    LSQUARE  shift, and go to state 53

    $default  reduce using rule 100 (init_declarator)

    square_list  go to state 54


State 48

   95 init_declarator_list: init_declarator_list • COMMA init_declarator
  189 declare: STATIC type_specifier $@16 init_declarator_list • SEMICOLON

    SEMICOLON  shift, and go to state 60
    COMMA      shift, and go to state 56


State 49

   95 init_declarator_list: init_declarator_list • COMMA init_declarator
  185 declare: CONST type_specifier $@14 init_declarator_list • SEMICOLON

    SEMICOLON  shift, and go to state 61
    COMMA      shift, and go to state 56


State 50

  180 external_declaration: type_specifier pointer_list $@13 external •

    $default  reduce using rule 180 (external_declaration)


State 51

  103 init_declarator: IDENTIFIER ASSIGN • assignment_expression

    PLUS               shift, and go to state 62
    MINUS              shift, and go to state 63
    STAR               shift, and go to state 64
    INCREMENT          shift, and go to state 65
    DECREMENT          shift, and go to state 66
    BITWISE_AND        shift, and go to state 67
    LOGICAL_NOT        shift, and go to state 68
    LROUND             shift, and go to state 69
    TRUE               shift, and go to state 70
    FALSE              shift, and go to state 71
    NULLPTR            shift, and go to state 72
    TILDE              shift, and go to state 73
    SIZEOF             shift, and go to state 74
    STRING_LITERAL     shift, and go to state 75
    IDENTIFIER         shift, and go to state 76
    DECIMAL_LITERAL    shift, and go to state 77
    DOUBLE_LITERAL     shift, and go to state 78
    EXPONENT_LITERAL   shift, and go to state 79
    CHARACTER_LITERAL  shift, and go to state 80

    primary_expression         go to state 81
    constant                   go to state 82
    postfix_expression         go to state 83
    unary_expression           go to state 84
    unary_operator             go to state 85
    cast_expression            go to state 86
    multiplicative_expression  go to state 87
    additive_expression        go to state 88
    shift_expression           go to state 89
    relational_expression      go to state 90
    equality_expression        go to state 91
    and_expression             go to state 92
    exclusive_or_expression    go to state 93
    inclusive_or_expression    go to state 94
    logical_and_expression     go to state 95
    logical_or_expression      go to state 96
    conditional_expression     go to state 97
    assignment_expression      go to state 98


State 52

  191 external: IDENTIFIER LROUND • RROUND $@17 compound_statement
  193         | IDENTIFIER LROUND • parameter_list RROUND $@18 compound_statement

    TYPE_NAME  shift, and go to state 2
    RROUND     shift, and go to state 99
    VOID       shift, and go to state 3
    INT        shift, and go to state 4
    DOUBLE     shift, and go to state 5
    CHAR       shift, and go to state 6
    BOOL       shift, and go to state 7
    LONG       shift, and go to state 8

    type_specifier         go to state 19
    parameter_list         go to state 100
    parameter_declaration  go to state 101
    return_type            go to state 102


State 53

  110 square_list: LSQUARE • constant_expression RSQUARE

    PLUS               shift, and go to state 62
    MINUS              shift, and go to state 63
    STAR               shift, and go to state 64
    INCREMENT          shift, and go to state 65
    DECREMENT          shift, and go to state 66
    BITWISE_AND        shift, and go to state 67
    LOGICAL_NOT        shift, and go to state 68
    LROUND             shift, and go to state 69
    TRUE               shift, and go to state 70
    FALSE              shift, and go to state 71
    NULLPTR            shift, and go to state 72
    TILDE              shift, and go to state 73
    SIZEOF             shift, and go to state 74
    STRING_LITERAL     shift, and go to state 75
    IDENTIFIER         shift, and go to state 76
    DECIMAL_LITERAL    shift, and go to state 77
    DOUBLE_LITERAL     shift, and go to state 78
    EXPONENT_LITERAL   shift, and go to state 79
    CHARACTER_LITERAL  shift, and go to state 80

    primary_expression         go to state 81
    constant                   go to state 82
    postfix_expression         go to state 83
    unary_expression           go to state 103
    unary_operator             go to state 85
    cast_expression            go to state 86
    multiplicative_expression  go to state 87
    additive_expression        go to state 88
    shift_expression           go to state 89
    relational_expression      go to state 90
    equality_expression        go to state 91
    and_expression             go to state 92
    exclusive_or_expression    go to state 93
    inclusive_or_expression    go to state 94
    logical_and_expression     go to state 95
    logical_or_expression      go to state 96
    conditional_expression     go to state 104
    constant_expression        go to state 105


State 54

  101 init_declarator: IDENTIFIER square_list •
  105                | IDENTIFIER square_list • ASSIGN initializer
  109 square_list: square_list • LSQUARE constant_expression RSQUARE

    ASSIGN   shift, and go to state 106
    LSQUARE  shift, and go to state 107

    $default  reduce using rule 101 (init_declarator)


State 55

  194 external: init_declarator_list SEMICOLON •

    $default  reduce using rule 194 (external)


State 56

   95 init_declarator_list: init_declarator_list COMMA • init_declarator

    STAR        shift, and go to state 24
    IDENTIFIER  shift, and go to state 47

    pointer_list     go to state 41
    init_declarator  go to state 108


State 57

  102 init_declarator: pointer_list IDENTIFIER •
  104                | pointer_list IDENTIFIER • ASSIGN assignment_expression
